tests/error/u64_values_in_static_if.c
// fail "This should error"

#if 18446744073709551615 > 123
#error This should error
#endif

int main(){
    
}


